tests/negative/gold/export_cyclic_test.gold
tests/negative/export_cyclic_test.toit:6:8: error: Cyclic export dependency
export foo
       ^~~
tests/negative/export_cyclic_a.toit:6:8: note: This clause contributes to the 'export' cycle
export foo
       ^~~
tests/negative/export_cyclic_a.toit:6:8: error: Cyclic export dependency
export foo
       ^~~
tests/negative/export_cyclic_test.toit:6:8: note: This clause contributes to the 'export' cycle
export foo
       ^~~
Compilation failed.
